make sure links in the menu are shown properly on mobile

--- a/src/components/Menu.scss
+++ b/src/components/Menu.scss
@@ -28,6 +28,10 @@ nav {
 
     img {
       height: 40px;
+
+      @media screen and (max-width: 800px) {
+        height: 30px;
+      }
     }
   }
 
@@ -41,7 +45,12 @@ nav {
 
   .link-item {
     list-style: none;
-    padding: 0 30px 12px;
+    padding: 0 25px 12px;
+
+    @media screen and (max-width: 800px) {
+      font-size: .95rem;
+      padding: 0 8px 6px;
+    }
   }
 
   .link {
